2010-08-11  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        [GTK] Misc improvements to the scrolling code
        https://bugs.webkit.org/show_bug.cgi?id=41926

        Refactor code that uses deprecated ways of dealing with the
        adjustments to use the GtkVersioning infrastructure.

        * GNUmakefile.am:
        * platform/gtk/GtkVersioning.cpp: Added.
        * platform/gtk/GtkVersioning.h:
        * platform/gtk/ScrollViewGtk.cpp:
        * platform/gtk/ScrollbarGtk.cpp:
        (ScrollbarGtk::detachAdjustment):
        (ScrollbarGtk::updateThumbPosition):
        (ScrollbarGtk::updateThumbProportion):

2010-08-11  Nate Chapin  <japhet@chromium.org>

        Chromium mac build fix (variables weren't being initialized).

        * platform/graphics/filters/FEGaussianBlur.cpp: 
        (WebCore::FEGaussianBlur::apply): Initalize dxLeft, dxRight, dyLeft, dyRight.

2010-08-11  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: apply correct fix to storage panel status bar buttons.

        https://bugs.webkit.org/show_bug.cgi?id=43846

        * inspector/front-end/DatabaseTableView.js:
        (WebInspector.DatabaseTableView.prototype.get statusBarItems):
        * inspector/front-end/StoragePanel.js:
        (WebInspector.StoragePanel.prototype._genericViewSetup):

2010-08-11  Kevin Ollivier  <kevino@theolliviers.com>

        Reviewed by Adam Barth.

        Override operator= for C++ DOM binding classes with private structs
        and update C++ DOM bindings test results.
        https://bugs.webkit.org/show_bug.cgi?id=43735

        * bindings/cpp/WebDOMEventTarget.cpp:
        (WebDOMEventTarget::operator=):
        * bindings/cpp/WebDOMEventTarget.h:
        * bindings/scripts/CodeGeneratorCPP.pm:
        * bindings/scripts/test/CPP/WebDOMTestCallback.cpp:
        (WebDOMTestCallback::operator=):