@@ -1,3 +1,14 @@
+2010-08-11  Ilya Tikhonovsky  <loislo@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        WebInspector: small refactoring for CodeGeneratorInspector.
+        all "notify" methods are generating in InspectorFrontend
+        the other methods are generating in InspectorBackend.
+        https://bugs.webkit.org/show_bug.cgi?id=43849
+
+        * inspector/CodeGeneratorInspector.pm:
+
 2010-08-11  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
 
         Reviewed by Xan Lopez.
